@@ -72,7 +72,7 @@ $TCA['tx_standorte_domain_model_fakultaet'] = array(
 $TCA['tx_standorte_domain_model_bibliothek'] = array(
 	'ctrl' => $TCA['tx_standorte_domain_model_bibliothek']['ctrl'],
 	'interface' => array(
-		'showRecordFieldList' => 'sys_language_uid,l10n_parent,l10n_diffsource,hidden,sigel,titel,lat,lon,bestand,strasse,plz,ort,ansprechpartner,zusatzinformationen,bild,fakultaet'
+		'showRecordFieldList' => 'sys_language_uid,l10n_parent,l10n_diffsource,hidden,sigel,titel,lat,lon,bestand,strasse,plz,ort,ansprechpartner,oeffnungszeiten,zusatzinformationen,bild,fakultaet'
 	),
 	'feInterface' => $TCA['tx_standorte_domain_model_bibliothek']['feInterface'],
 	'columns' => array(
@@ -234,6 +234,16 @@ $TCA['tx_standorte_domain_model_bibliothek'] = array(
 				),
 			)
 		),
+		'oeffnungszeiten' => array(
+			'exclude' => 0,
+			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_bibliothek.oeffnungszeiten',
+			'config' => array(
+				'type' => 'inline',
+				'foreign_table' => 'tx_standorte_domain_model_oeffnungszeiten',
+				'foreign_field' => 'bibliothek',
+				'maxitems' => 9999
+			),
+		),
 		'bild' => array(
 			'exclude' => 0,
 			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_bibliothek.bild',
@@ -264,10 +274,90 @@ $TCA['tx_standorte_domain_model_bibliothek'] = array(
 		),
 	),
 	'types' => array(
-		'0' => array('showitem' => 'sys_language_uid;;;;1-1-1, l10n_parent, l10n_diffsource, hidden;;1, sigel, titel, lat, lon, bestand, strasse, plz, ort, ansprechpartner, zusatzinformationen;;;richtext[]:rte_transform[mode=ts_css|imgpath=uploads/tx_standorte/rte/], bild, fakultaet')
+		'0' => array('showitem' => 'sys_language_uid;;;;1-1-1, l10n_parent, l10n_diffsource, hidden;;1, sigel, titel, lat, lon, bestand, strasse, plz, ort, ansprechpartner, oeffnungszeiten, zusatzinformationen;;;richtext[]:rte_transform[mode=ts_css|imgpath=uploads/tx_standorte/rte/], bild, fakultaet')
 	),
 	'palettes' => array(
 		'1' => array('showitem' => '')
+	)
+);
+
+$TCA['tx_standorte_domain_model_oeffnungszeiten'] = array(
+	'ctrl' => $TCA['tx_standorte_domain_model_oeffnungszeiten']['ctrl'],
+	'interface' => array(
+		'showRecordFieldList' => 'wochentag,von,bis,inhalt'
+	),
+	'feInterface' => $TCA['tx_standorte_domain_model_oeffnungszeiten']['feInterface'],
+	'columns' => array(
+		'hidden' => array(
+			'exclude' => 1,
+			'label' => 'LLL:EXT:lang/locallang_general.xml:LGL.hidden',
+			'config' => array(
+				'type' => 'check',
+				'default' => '0'
+			)
+		),
+		'wochentag' => array(
+			'exclude' => 0,
+			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag',
+			'config' => array(
+				'type' => 'select',
+				'items' => array(
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.0', '1'),
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.1', '2'),
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.2', '3'),
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.3', '4'),
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.4', '5'),
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.5', '6'),
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.6', '7'),
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.7', '8'),
+					array('LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.wochentag.I.8', '9'),
+				),
+				'size' => 1,
+				'maxitems' => 1,
+			)
+		),
+		'von' => array(
+			'displayCond' => 'FIELD:wochentag:<=:8',
+			'exclude' => 0,
+			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.von',
+			'config' => array(
+				'type' => 'input',
+				'size' => '5',
+				'max' => '5',
+				'eval' => 'required,trim',
+			)
+		),
+		'bis' => array(
+			'displayCond' => 'FIELD:wochentag:<=:8',
+			'exclude' => 0,
+			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.bis',
+			'config' => array(
+				'type' => 'input',
+				'size' => '5',
+				'max' => '5',
+				'eval' => 'required,trim',
+			)
+		),
+		'inhalt' => array(
+			'displayCond' => 'FIELD:wochentag:=:9',
+			'exclude' => 0,
+			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.inhalt',
+			'config' => array(
+				'type' => 'text',
+				'cols' => 30,
+				'rows' => 5
+			)
+		),
+		'bibliothek' => array(
+			'exclude' => 0,
+			'label' => 'LLL:EXT:standorte/locallang_db.xml:tx_standorte_domain_model_oeffnungszeiten.bibliothek',
+			'config' => array(
+				'type' => 'passthrough',
+			)
+		),
+	),
+	'types' => array(
+		'0' => array('showitem' => 'hidden;;1;;1-1-1, wochentag, von, bis,inhalt'),
 	)
 );
 ?>
