@@ -27,7 +27,7 @@
 			</dl>
 			<dl>
 				<dt>Bibliotheksbeauftragte</dt>
-				<dd>{bibo.ansprechpartner}</dd>
+				<dd><f:format.html>{bibo.ansprechpartner}</f:format.html></dd>
 			</dl>
 			<dl>
 				<dt>Best&auml;nde</dt>
