@@ -42,6 +42,26 @@ $TCA['tx_standorte_domain_model_bibliothek'] = array(
 		'iconfile' => t3lib_extMgm::extRelPath($_EXTKEY) . '/Resources/Public/img/icon_tx_standorte_domain_model_bibliothek.png',
 	),
 );
+
+$TCA['tx_standorte_domain_model_oeffnungszeiten'] = array(
+	'ctrl' => array(
+		'title' => 'Oeffnungszeiten',
+		'requestUpdate' => 'wochentag',
+		'label' => 'wochentag',
+		'tstamp' => 'tstamp',
+		'crdate' => 'crdate',
+		'cruser_id' => 'cruser_id',
+		'default_sortby' => 'ORDER BY wochentag',
+		'delete' => 'deleted',
+		'enablecolumns' => array(
+			'disabled' => 'hidden',
+		),
+		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY) . '/Configuration/TCA/tca.php',
+		'iconfile' => t3lib_extMgm::extRelPath($_EXTKEY) . 'icon_tx_standorte_domain_model_oeffnungszeiten.gif',
+	),
+);
+
+
 Tx_Extbase_Utility_Extension::registerPlugin($_EXTKEY, 'Pi1', 'SUB Standorte');
 
 if (TYPO3_MODE === 'BE') {
@@ -64,4 +84,5 @@ if (TYPO3_MODE === 'BE') {
 }
 
 t3lib_extMgm::addStaticFile($_EXTKEY, 'Configuration/TypoScript', 'Standorte');
+$TCA['tt_content']['ctrl']['requestUpdate'] = $TCA['tt_content']['ctrl']['requestUpdate'] ? $TCA['tt_content']['ctrl']['requestUpdate'] . ',wochentag' : 'wochentag';
 ?>
