@@ -19,7 +19,7 @@ CREATE TABLE tx_standorte_domain_model_fakultaet (
 );
 
 #
-# Table structure for table 'tx_standorte_bibliothek'
+# Table structure for table 'tx_standorte_domain_model_bibliothek'
 #
 CREATE TABLE tx_standorte_domain_model_bibliothek (
     uid int(11) NOT NULL auto_increment,
@@ -41,10 +41,45 @@ CREATE TABLE tx_standorte_domain_model_bibliothek (
     plz int(11) DEFAULT '0' NOT NULL,
     ort varchar(255) DEFAULT '' NOT NULL,
     ansprechpartner text,
+	oeffnungszeiten text,
     zusatzinformationen text,
     bild text,
     fakultaet tinytext,
 
     PRIMARY KEY (uid),
     KEY parent (pid)
+);
+
+#
+# Table structure for table 'tx_standorte_domain_model_oeffnungszeiten'
+#
+CREATE TABLE tx_standorte_domain_model_oeffnungszeiten (
+    uid int(11) NOT NULL auto_increment,
+    pid int(11) DEFAULT '0' NOT NULL,
+    tstamp int(11) DEFAULT '0' NOT NULL,
+    crdate int(11) DEFAULT '0' NOT NULL,
+    cruser_id int(11) DEFAULT '0' NOT NULL,
+    deleted tinyint(4) DEFAULT '0' NOT NULL,
+    hidden tinyint(4) DEFAULT '0' NOT NULL,
+    wochentag int(11) DEFAULT '0' NOT NULL,
+    von varchar(5) DEFAULT '' NOT NULL,
+    bis varchar(5) DEFAULT '' NOT NULL,
+	bibliothek int(11) DEFAULT '0' NOT NULL,
+	inhalt tinytext,Pfe
+
+    PRIMARY KEY (uid),
+    KEY parent (pid)
+);
+
+#
+# Table structure for table 'tx_standorte_domain_model_oeffnungszeiten_mm'
+#
+#
+CREATE TABLE tx_standorte_domain_model_bibliothek_oeffnungszeiten_mm (
+  uid_local int(11) DEFAULT '0' NOT NULL,
+  uid_foreign int(11) DEFAULT '0' NOT NULL,
+  tablenames varchar(30) DEFAULT '' NOT NULL,
+  sorting int(11) DEFAULT '0' NOT NULL,
+  KEY uid_local (uid_local),
+  KEY uid_foreign (uid_foreign)
 );
