@@ -1,3 +1,9 @@
+2010-12-13 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* 
+
+2010-12-06 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* IRRE Oeffnungszeiten
+
 2010-12-01 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Refactoring
 	* MM Tabellen geloescht
